apps/olympus/vulcan/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulcan
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: vulcan-jobs
  labels:
    vulcan.olympus/managed: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
